--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@mdi/font": "^6.5.95",
     "buefy": "^0.9.13",
     "core-js": "^3.6.5",
     "vue": "^2.6.14",
