--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -1,2 +1,129 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
+akka {
+  actor {
+    default-dispatcher {
+      fork-join-executor {
+        parallelism-factor = 3.0
+        parallelism-max = 64
+        task-peeking-mode = LIFO
+      }
+    }
+  }
+
+  http {
+    parsing {
+      max-uri-length = 500k
+      illegal-header-warnings = off
+    }
+  }
+}
+
+play {
+  server {
+    # The server provider class name
+    provider = "play.core.server.AkkaHttpServerProvider"
+    max-content-length = infinite
+    akka {
+      bindTimeout = 5 seconds
+      transparent-head-requests = off
+      default-host-header = ""
+      tls-session-info-header = on
+    }
+  }
+
+  http {
+    errorHandler = "com.leafchild0.adr.common.ErrorHandler"
+  }
+}
+
+## Filter Configuration
+# https://www.playframework.com/documentation/latest/Filters
+#
+play.filters {
+  enabled=[play.filters.cors.CORSFilter]
+
+  ## Allowed hosts filter configuration
+  # https://www.playframework.com/documentation/latest/AllowedHostsFilter
+  hosts {
+    # Allow requests to localhost on ports 7700 (dev) and 19001 (default test) ports
+    allowed = ["localhost:7700"]
+  }
+}
+
+# db connections = ((physical_core_count * 2) + effective_spindle_count)
+fixedConnectionPool = 9
+
+database.dispatcher {
+  executor = "thread-pool-executor"
+  throughput = 1
+  thread-pool-executor {
+    fixed-pool-size = ${fixedConnectionPool}
+  }
+}
+
+play.evolutions {
+  #enabled = false
+  # You can disable evolutions for a specific datasource if necessary
+  #db.default.enabled = false
+  db.default.enabled=true
+  db.default.autoApply=true
+  db.default.useLocks=true
+  db.default.autoApplyDowns=false
+}
+
+play.db {
+  # The combination of these two settings results in "db.default" as the
+  # default JDBC pool:
+  config = "db"
+  default = "default"
+  pool = "hikaricp"
+  # Play uses HikariCP as the default connection pool.  You can override
+  # settings by changing the prototype:
+  prototype {
+  }
+}
+
+db {
+  default {
+    driver = com.mysql.cj.jdbc.Driver
+    url = "jdbc:mysql://localhost:3306/play=adr?allowPublicKeyRetrieval=true&useUnicode=true&useSSL=false"
+    username = "root"
+    password = "evertest"
+    jndiName = DefaultDS
+    hikaricp {
+      minimumIdle = 4
+      maximumPoolSize = ${fixedConnectionPool}
+      connectionTimeout = 2 seconds
+      connectionTestQuery = "SELECT 1"
+      initializationFailTimeout = 1
+      idleTimeout = 10 minutes
+      maxLifetime = 30 minutes
+      isolateInternalQueries = false
+      allowPoolSuspension = false
+      readOnly = false
+      dataSource {
+        cachePrepStmts = true
+        prepStmtCacheSize = 250
+        prepStmtCacheSqlLimit = 2048
+        useServerPrepStmts = true
+        useLocalSessionState = true
+        rewriteBatchedStatements = true
+        cacheResultSetMetadata = true
+        cacheServerConfiguration = true
+        elideSetAutoCommits = true
+        maintainTimeStats = false
+        characterEncoding="UTF-8"
+        useUnicode=true
+      }
+    }
+  }
+}
+
+jpa {
+  default=defaultPersistenceUnit
+}
+
+application {
+  environment = localhost
+}
