Using Mysql instead of H2

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -2,11 +2,14 @@
 # https://www.playframework.com/documentation/latest/ConfigFile
 
 db {
-  default.driver = org.h2.Driver
-  default.url = "jdbc:h2:mem:play"
+  default {
+   driver = com.mysql.cj.jdbc.Driver
+   url = "jdbc:mysql://localhost:3306/play-adr?allowPublicKeyRetrieval=true&useUnicode=true&useSSL=false"
+   username = "root"
+   password = "evertest"
 
-  # Provided for JPA access
-  default.jndiName=DefaultDS
+   jndiName=DefaultDS
+  }
 }
 
 # Point JPA at our database configuration
