--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.7'
     implementation 'org.hibernate:hibernate-core:5.6.2.Final'
     implementation 'org.hibernate:hibernate-envers:5.6.2.Final'
-    implementation 'com.h2database:h2:2.0.202'
+    implementation 'mysql:mysql-connector-java:8.0.27'
 
     implementation "com.typesafe.play:play-guice_2.12:2.6.15"
     implementation "com.typesafe.play:play-java-jpa_2.12:2.6.15"
